hphp/hack/test/typecheck/dict_const.php.exp
File "dict_const.php", line 12, characters 46-52:
Invalid expression in constant initializer (Parsing[1002])
